Fix table selection

--- a/ndmanager/src/anatomylayout.ui
+++ b/ndmanager/src/anatomylayout.ui
@@ -1,276 +1,273 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0" stdsetdef="1">
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>AnatomyLayout</class>
-  <widget class="QWidget" name="AnatomyLayout">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>678</width>
-        <height>214</height>
-      </rect>
-    </property>
-    <property name="windowTitle">
-      <string>Anatomy</string>
-    </property>
+<ui version="4.0">
+ <class>AnatomyLayout</class>
+ <widget class="QWidget" name="AnatomyLayout">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>678</width>
+    <height>214</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Anatomy</string>
+  </property>
+  <layout class="QGridLayout">
+   <item row="0" column="0">
     <layout class="QGridLayout">
-      <item row="0" column="0">
+     <item row="0" column="2" rowspan="2">
+      <layout class="QGridLayout">
+       <item row="0" column="1">
+        <spacer name="spacer10_2_3_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>354</width>
+           <height>16</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="0" colspan="2">
         <layout class="QGridLayout">
-          <item row="0" column="2" rowspan="2" colspan="1">
-            <layout class="QGridLayout">
-              <item row="0" column="1">
-                <spacer name="spacer10_2_3_2">
-                  <property name="sizeHint">
-                    <size>
-                      <width>354</width>
-                      <height>16</height>
-                    </size>
-                  </property>
-                  <property name="sizeType">
-                    <enum>QSizePolicy::Expanding</enum>
-                  </property>
-                  <property name="orientation">
-                    <enum>Qt::Horizontal</enum>
-                  </property>
-                </spacer>
-              </item>
-              <item row="3" column="0" rowspan="1" colspan="2">
-                <layout class="QGridLayout">
-                  <item row="0" column="0">
-                    <spacer name="spacer10_2_2">
-                      <property name="sizeHint">
-                        <size>
-                          <width>20</width>
-                          <height>16</height>
-                        </size>
-                      </property>
-                      <property name="sizeType">
-                        <enum>QSizePolicy::Fixed</enum>
-                      </property>
-                      <property name="orientation">
-                        <enum>Qt::Horizontal</enum>
-                      </property>
-                    </spacer>
-                  </item>
-                  <item row="0" column="2">
-                    <spacer name="spacer10_2_2_2">
-                      <property name="sizeHint">
-                        <size>
-                          <width>20</width>
-                          <height>16</height>
-                        </size>
-                      </property>
-                      <property name="sizeType">
-                        <enum>QSizePolicy::Fixed</enum>
-                      </property>
-                      <property name="orientation">
-                        <enum>Qt::Horizontal</enum>
-                      </property>
-                    </spacer>
-                  </item>
-                  <item row="0" column="4">
-                    <spacer name="spacer10_2_3">
-                      <property name="sizeHint">
-                        <size>
-                          <width>136</width>
-                          <height>16</height>
-                        </size>
-                      </property>
-                      <property name="sizeType">
-                        <enum>QSizePolicy::Expanding</enum>
-                      </property>
-                      <property name="orientation">
-                        <enum>Qt::Horizontal</enum>
-                      </property>
-                    </spacer>
-                  </item>
-                  <item row="0" column="1">
-                    <widget class="QPushButton" name="addGroupButton">
-                      <property name="sizePolicy">
-                        <sizepolicy>
-                          <hsizetype>0</hsizetype>
-                          <vsizetype>0</vsizetype>
-                          <horstretch>0</horstretch>
-                          <verstretch>0</verstretch>
-                        </sizepolicy>
-                      </property>
-                      <property name="minimumSize">
-                        <size>
-                          <width>104</width>
-                          <height>0</height>
-                        </size>
-                      </property>
-                      <property name="maximumSize">
-                        <size>
-                          <width>104</width>
-                          <height>32767</height>
-                        </size>
-                      </property>
-                      <property name="text">
-                        <string>Add</string>
-                      </property>
-                    </widget>
-                  </item>
-                  <item row="0" column="3">
-                    <widget class="QPushButton" name="removeGroupButton">
-                      <property name="sizePolicy">
-                        <sizepolicy>
-                          <hsizetype>0</hsizetype>
-                          <vsizetype>0</vsizetype>
-                          <horstretch>0</horstretch>
-                          <verstretch>0</verstretch>
-                        </sizepolicy>
-                      </property>
-                      <property name="minimumSize">
-                        <size>
-                          <width>104</width>
-                          <height>0</height>
-                        </size>
-                      </property>
-                      <property name="maximumSize">
-                        <size>
-                          <width>104</width>
-                          <height>32767</height>
-                        </size>
-                      </property>
-                      <property name="text">
-                        <string>Remove</string>
-                      </property>
-                    </widget>
-                  </item>
-                </layout>
-              </item>
-              <item row="1" column="0" rowspan="1" colspan="2">
-                <widget class="QTableWidget" name="groupTable">
-                  <property name="sizePolicy">
-                    <sizepolicy>
-                      <hsizetype>7</hsizetype>
-                      <vsizetype>7</vsizetype>
-                      <horstretch>0</horstretch>
-                      <verstretch>0</verstretch>
-                    </sizepolicy>
-                  </property>
-                  <property name="minimumSize">
-                    <size>
-                      <width>200</width>
-                      <height>100</height>
-                    </size>
-                  </property>
-                  <property name="verticalScrollBarPolicy">
-                    <enum>Qt::ScrollBarAsNeeded</enum>
-                  </property>
-                  <property name="rowCount">
-                    <number>0</number>
-                  </property>
-                  <property name="columnCount">
-                    <number>1</number>
-                  </property>
-                  <property name="selectionMode">
-                    <enum>QAbstractItemView::MultiSelection</enum>
-                  </property>
-                  <column>
-                    <property name="text">
-                      <string>Channels</string>
-                    </property>
-                  </column>
-                </widget>
-              </item>
-              <item row="0" column="0">
-                <widget class="QLabel" name="textLabel4_2_2_4_2_2_2">
-                  <property name="text">
-                    <string>Groups</string>
-                  </property>
-                  <property name="wordWrap">
-                    <bool>false</bool>
-                  </property>
-                </widget>
-              </item>
-              <item row="2" column="0">
-                <spacer name="spacer96">
-                  <property name="sizeHint">
-                    <size>
-                      <width>16</width>
-                      <height>19</height>
-                    </size>
-                  </property>
-                  <property name="sizeType">
-                    <enum>QSizePolicy::Fixed</enum>
-                  </property>
-                  <property name="orientation">
-                    <enum>Qt::Vertical</enum>
-                  </property>
-                </spacer>
-              </item>
-            </layout>
-          </item>
-          <item row="1" column="1">
-            <spacer name="spacer10_2_3_3">
-              <property name="sizeHint">
-                <size>
-                  <width>30</width>
-                  <height>16</height>
-                </size>
-              </property>
-              <property name="sizeType">
-                <enum>QSizePolicy::Fixed</enum>
-              </property>
-              <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-              </property>
-            </spacer>
-          </item>
-          <item row="0" column="0">
-            <widget class="QLabel" name="textLabel4_2_2_4_2_2">
-              <property name="text">
-                <string>Channel attributes</string>
-              </property>
-              <property name="wordWrap">
-                <bool>false</bool>
-              </property>
-            </widget>
-          </item>
-          <item row="1" column="0">
-            <widget class="QTableWidget" name="attributesTable">
-              <property name="sizePolicy">
-                <sizepolicy>
-                  <hsizetype>0</hsizetype>
-                  <vsizetype>7</vsizetype>
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                </sizepolicy>
-              </property>
-              <property name="minimumSize">
-                <size>
-                  <width>200</width>
-                  <height>100</height>
-                </size>
-              </property>
-              <property name="verticalScrollBarPolicy">
-                <enum>Qt::ScrollBarAsNeeded</enum>
-              </property>
-              <property name="rowCount">
-                <number>0</number>
-              </property>
-              <property name="columnCount">
-                <number>1</number>
-              </property>
-              <property name="selectionMode">
-                <enum>QAbstractItemView::MultiSelection</enum>
-              </property>
-              <column>
-                <property name="text">
-                  <string>Skip</string>
-                </property>
-              </column>
-            </widget>
-          </item>
+         <item row="0" column="0">
+          <spacer name="spacer10_2_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>16</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="2">
+          <spacer name="spacer10_2_2_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>16</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="4">
+          <spacer name="spacer10_2_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Expanding</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>136</width>
+             <height>16</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="addGroupButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>104</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>104</width>
+             <height>32767</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Add</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="3">
+          <widget class="QPushButton" name="removeGroupButton">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>104</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>104</width>
+             <height>32767</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Remove</string>
+           </property>
+          </widget>
+         </item>
         </layout>
-      </item>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="QTableWidget" name="groupTable">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>200</width>
+           <height>100</height>
+          </size>
+         </property>
+         <property name="verticalScrollBarPolicy">
+          <enum>Qt::ScrollBarAsNeeded</enum>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::MultiSelection</enum>
+         </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
+         <property name="rowCount">
+          <number>0</number>
+         </property>
+         <property name="columnCount">
+          <number>1</number>
+         </property>
+         <column>
+          <property name="text">
+           <string>Channels</string>
+          </property>
+         </column>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="textLabel4_2_2_4_2_2_2">
+         <property name="text">
+          <string>Groups</string>
+         </property>
+         <property name="wordWrap">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <spacer name="spacer96">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Fixed</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>16</width>
+           <height>19</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item row="1" column="1">
+      <spacer name="spacer10_2_3_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>30</width>
+         <height>16</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="textLabel4_2_2_4_2_2">
+       <property name="text">
+        <string>Channel attributes</string>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QTableWidget" name="attributesTable">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>200</width>
+         <height>100</height>
+        </size>
+       </property>
+       <property name="verticalScrollBarPolicy">
+        <enum>Qt::ScrollBarAsNeeded</enum>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::MultiSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <property name="rowCount">
+        <number>0</number>
+       </property>
+       <property name="columnCount">
+        <number>1</number>
+       </property>
+       <column>
+        <property name="text">
+         <string>Skip</string>
+        </property>
+       </column>
+      </widget>
+     </item>
     </layout>
-  </widget>
-  <layoutdefault spacing="6" margin="11"/>
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <resources/>
+ <connections/>
 </ui>
