--- a/ndmanager/src/channeloffsetslayout.ui
+++ b/ndmanager/src/channeloffsetslayout.ui
@@ -24,6 +24,9 @@
          <height>0</height>
         </size>
        </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
        <column>
         <property name="text">
          <string>Offset</string>
