--- a/ndmanager/src/channelcolorslayout.ui
+++ b/ndmanager/src/channelcolorslayout.ui
@@ -33,6 +33,12 @@
        <property name="columnCount">
         <number>3</number>
        </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="verticalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
        <column>
         <property name="text">
          <string>Current Color</string>
