--- a/ndmanager/src/channeloffsetslayout.ui
+++ b/ndmanager/src/channeloffsetslayout.ui
@@ -27,6 +27,9 @@
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
        </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
        <column>
         <property name="text">
          <string>Offset</string>
