--- a/ndmanager/src/anatomylayout.ui
+++ b/ndmanager/src/anatomylayout.ui
@@ -165,6 +165,9 @@
          <property name="columnCount">
           <number>1</number>
          </property>
+         <attribute name="horizontalHeaderStretchLastSection">
+          <bool>true</bool>
+         </attribute>
          <column>
           <property name="text">
            <string>Channels</string>
@@ -255,6 +258,9 @@
        <property name="columnCount">
         <number>1</number>
        </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
        <column>
         <property name="text">
          <string>Skip</string>
